[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/Menus/LobbyPeerMenu.gd" type="Script" id=1]
[ext_resource path="res://Game/Menus/Textures/EmptyState.png" type="Texture" id=2]
[ext_resource path="res://Game/Menus/Fonts/Nunito-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Game/Menus/Textures/HostCrown.png" type="Texture" id=4]
[ext_resource path="res://Game/Players/Mario/Textures/Stand/stand_01.png" type="Texture" id=5]
[ext_resource path="res://Game/Menus/Textures/Arrow.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.780392, 0.92549, 0.933333, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/EmptyState.png-b3c8fedc94fc3201392c3040dec40f0b.stex"

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="GDScript" id=4]
script/source = "extends TextureRect

onready var start_pos = rect_position

var accumulator = 0.0

func _process(delta):
	accumulator += 5 * delta
	rect_position.y = start_pos.y + cos(accumulator) * 3"

[node name="LobbyPeerMenu" type="Control"]
margin_right = 200.0
margin_bottom = 200.0
script = ExtResource( 1 )

[node name="Box" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="EmptyState" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Background" type="TextureRect" parent="."]
visible = false
margin_top = -1.0
margin_right = 512.0
margin_bottom = 527.0
texture = SubResource( 2 )

[node name="PeerName" type="Label" parent="."]
visible = false
margin_left = 17.0
margin_top = 76.0
margin_right = 81.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 3 )
text = "Player #1"
valign = 1
autowrap = true
clip_text = true

[node name="HostCrown" type="TextureRect" parent="."]
visible = false
margin_left = 78.0
margin_top = -8.0
margin_right = 85.0
margin_bottom = -4.0
rect_rotation = 45.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="CharacterSprite" type="TextureRect" parent="."]
visible = false
margin_left = 32.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="NextCharacterLeft" type="TextureRect" parent="."]
visible = false
margin_left = 16.0
margin_top = 48.0
margin_right = 26.0
margin_bottom = 61.0
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
script = SubResource( 4 )

[node name="NextCharacterRight" type="TextureRect" parent="."]
visible = false
margin_left = 80.0
margin_top = 48.0
margin_right = 90.0
margin_bottom = 61.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
script = SubResource( 4 )
